--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,4 @@
 idf_component_register(SRCS "main.c"
                     INCLUDE_DIRS "."
                     REQUIRES nvs_flash
-                    PRIV_REQUIRES UDPlogger esp_wifi)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DUDPLOG_PRINTF_TO_UDP -DUDPLOG_PRINTF_ALSO_SERIAL")
+                    PRIV_REQUIRES UDPlogger esp_wifi esp_driver_gpio)
